--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>translate</title>
+    <title>Translate | 翻译</title>
+    <meta name="keywords" content="google, 翻译, google-ranslate-api, node, 多语言翻译" />
     <!--app-head-->
   </head>
   <body>
